--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/stock_calculator
-PORT=3000
+# MONGODB_URI=mongodb://localhost:27017/stock_calculator
+# PORT=3000
+MONGODB_URI=mongodb+srv://hectoriko:i2xYxbaeLwCWKkNC@multiproject.veahrd3.mongodb.net/stock_calculator
